# RegulatoryComplianceIntelligence

./: README.md  app.py  main.py  pyproject.toml
app/core/: db.py
app/ingestion/: ingestion.py
app/retrieval/: retrieval.py
app/routes/: routes.py
app/service/: service.py
