[project]
name = "regulatory-compliance-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain[google-genai]>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-postgres>=0.0.17",
    "streamlit>=1.57.0",
    "pypdf>=6.12.1",
    "psycopg2>=2.9.12",
    "tiktoken>=0.13.0",
]